--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,46 @@
+*{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+::-webkit-scrollbar {
+    width: 5px;
+  }
 .App{
+    display: flex;
     width: 100vw;
     height: 100vh;
+    background-color: #E4E9F7;
+    overflow-x: auto;
+}
+
+h1{
+    margin: 0;
+    padding: 0;
+}
+
+.Nav{
+    display: flex;
+}
+
+.Container{
+    display: flex;
+    flex-direction: column;
+    padding:  14px;
+    width: 100%;
+}
+
+.Search{
+    display: flex;
+    background-color: wheat;
+    padding: 10px 50px;
+    width: calc(100%-50px)
+    
+}
+
+.Home{
+    display: flex;
+    margin-top: 30px;
+    background-color: blanchedalmond;
 }
 
 body{
