--- a/src/components/navigation/Navbar.css
+++ b/src/components/navigation/Navbar.css
@@ -1,10 +1,8 @@
 .nav-container{
-    position: fixed;
-    top: 0;
-    left: 0;
     height: 100%;
     width: 250px;
-    background-color: #2F4050;
+    background-color: #FFF;
+    padding:10px 14px;
 }
 
 .nav-container.active{
@@ -20,10 +18,20 @@
 
 .name{
     display: flex;
-    font-size: 20px;
-    font-weight: 600;
     justify-content: center;
     flex-direction: column;
+    color: #707070;
+    letter-spacing: 2px;
+}
+
+.name .first{
+    font-size: 22px;
+    font-weight: 600;
+}
+
+.name .second{
+    font-size: 20px;
+    font-weight: 500;
 }
 
 .logo{
@@ -33,7 +41,7 @@
     min-width: 60px;
     border-radius: 6px;
     justify-content: center;
-   
+    color:#695CFE;
 }
 
 .nav-container.active h2, .nav-container.active span{
@@ -50,14 +58,16 @@ h2,ul{
 
 .nav-menu{
     margin-top: 20px;
+    display: flex;
 }
 
 .nav-text{
     display: flex;
-    justify-content: start;
     align-items: center;
     list-style: none;
     height: 60px;
+    margin-top: 10px;
+    
 }
 
 .nav-text .icon{
@@ -67,21 +77,29 @@ h2,ul{
     display: flex;
     align-items: center;
     justify-content: center;
+    font-size: 22px;
 }
 
 .nav-text a{
     text-decoration: none;
-    color: #f5f5f5;
-    font-size: 18px;
+    color: #707070;
+    font-size: 20px;
+    font-weight: 400;
     width: 100%;
     height: 100%;
     display: flex;
     align-items: center;
+    border-radius: 6px;
 }
 
 .nav-text a:hover{
-    background-color:  #1a83ff;
+    background-color:  #695CFE;
+   
+}
 
+.nav-text:hover .icon,
+.nav-text:hover a{
+    color: #FFF;
 }
 
 .nav-menu-items{
