--- a/src/App.css
+++ b/src/App.css
@@ -25,19 +25,20 @@ h1{
 .Container{
     display: flex;
     flex-direction: column;
-    padding:  14px;
+    padding:  20px;
     width: 100%;
 }
 
-.Search{
+
+.TopBar{
     display: flex;
-    background-color: wheat;
-    padding: 10px 50px;
-    width: calc(100%-50px)
-    
+    background-color: #FFF;
+    border-radius: 6px;
+    justify-content: space-between;
+    align-items:center;
 }
 
-.Home{
+.Main{
     display: flex;
     margin-top: 30px;
     background-color: blanchedalmond;
